Simplified Bolt transaction management ()
* Refactored transaction management.

* Introduced support for injecting connections.

* Fixed an issue in which the database name might be null if a test relies on the system defaults.

* Fixed an issue which causes the database management service builder to discard the selected implementation.

* Reintroduced response type metrics.

* Moved all transaction checks to Connection.

* Corrected the surfacing of database not found and unavailability errors.

* Fixed a race condition which can cause memory tracking errors to be thrown during connection shutdown.

* Adjusted connection shutdown sequence tests to match new behavior.

* Added exception unwrapping to all relevant transaction interactions.

* Corrected transaction behavior for user controlled closure.

* Replaced IllegalStateException with a status bearing exception to trigger Bolt error handling.

* Fixed a hidden merge conflict.

* Fixed a possible NPE when encountering errors while fetching a routing table.

* Unified the error handling within state machine invocations.

* Corrected the statement termination behavior.

* Corrected another small issue within the Fabric tests.