@@ -19,114 +19,53 @@
  */
 package org.neo4j.bolt.testing.messages;
 
-import static org.neo4j.bolt.protocol.v40.messaging.request.RollbackMessage.INSTANCE;
-import static org.neo4j.bolt.protocol.v40.messaging.util.MessageMetadataParserV40.ABSENT_DB_NAME;
-import static org.neo4j.internal.helpers.collection.MapUtil.map;
+import static java.util.Collections.emptyMap;
 import static org.neo4j.internal.helpers.collection.MapUtil.stringMap;
 
+import java.util.Collections;
 import java.util.Map;
-import java.util.stream.Stream;
-import org.neo4j.bolt.dbapi.CustomBookmarkFormatParser;
-import org.neo4j.bolt.messaging.BoltIOException;
-import org.neo4j.bolt.protocol.common.message.AccessMode;
+import org.neo4j.bolt.negotiation.ProtocolVersion;
 import org.neo4j.bolt.protocol.common.message.request.RequestMessage;
-import org.neo4j.bolt.protocol.error.bookmark.BookmarkParserException;
-import org.neo4j.bolt.protocol.v40.bookmark.BookmarkParserV40;
-import org.neo4j.bolt.protocol.v40.messaging.request.BeginMessage;
-import org.neo4j.bolt.protocol.v40.messaging.request.DiscardMessage;
-import org.neo4j.bolt.protocol.v40.messaging.request.GoodbyeMessage;
-import org.neo4j.bolt.protocol.v40.messaging.request.PullMessage;
-import org.neo4j.bolt.protocol.v40.messaging.request.ResetMessage;
-import org.neo4j.bolt.protocol.v40.messaging.request.RunMessage;
+import org.neo4j.bolt.protocol.v41.BoltProtocolV41;
 import org.neo4j.bolt.protocol.v41.message.request.HelloMessage;
 import org.neo4j.bolt.protocol.v41.message.request.RoutingContext;
-import org.neo4j.kernel.database.DatabaseIdRepository;
-import org.neo4j.values.virtual.ListValue;
-import org.neo4j.values.virtual.MapValue;
 
 /**
  * Quick access of all Bolt V41 messages
  */
-public class BoltV41Messages {
-    private static final String USER_AGENT = "BoltV41Messages/0.0";
-    private static final RequestMessage HELLO = new HelloMessage(
-            map("user_agent", USER_AGENT),
-            new RoutingContext(true, stringMap("policy", "fast", "region", "europe")),
-            map("user_agent", USER_AGENT));
-    private static final RequestMessage RUN_RETURN_ONE = new RunMessage("RETURN 1");
-    private static final RequestMessage BEGIN = new BeginMessage();
+public class BoltV41Messages extends AbstractBoltMessages {
+    private static final BoltV41Messages INSTANCE = new BoltV41Messages();
 
-    public static Stream<RequestMessage> supported() throws BoltIOException {
-        return Stream.of(hello(), goodbye(), run(), discard(10), pull(10), begin(), commit(), rollback(), reset());
+    protected BoltV41Messages() {}
+
+    public static BoltMessages getInstance() {
+        return INSTANCE;
     }
 
-    public static RequestMessage begin() throws BoltIOException {
-        return BEGIN;
+    @Override
+    public ProtocolVersion version() {
+        return BoltProtocolV41.VERSION;
     }
 
-    public static RequestMessage begin(DatabaseIdRepository repository, ListValue bookmarks)
-            throws BookmarkParserException {
-        var bookmarkList =
-                new BookmarkParserV40(repository, CustomBookmarkFormatParser.DEFAULT).parseBookmarks(bookmarks);
-        return new BeginMessage(MapValue.EMPTY, bookmarkList, null, AccessMode.WRITE, Map.of(), ABSENT_DB_NAME);
+    @Override
+    public RequestMessage hello(RoutingContext routingContext) {
+        return hello(Collections.emptyMap(), routingContext);
     }
 
-    public static RequestMessage discard(long n) {
-        return new DiscardMessage(MapValue.EMPTY, n, -1);
+    @Override
+    public RequestMessage hello(Map<String, Object> meta) {
+        var helloMetaMap = this.getDefaultHelloMetaMap(meta);
+        return new HelloMessage(helloMetaMap, new RoutingContext(true, emptyMap()), helloMetaMap);
     }
 
-    public static RequestMessage pull(long n) {
-        return new PullMessage(MapValue.EMPTY, n, -1);
+    @Override
+    public RequestMessage hello() {
+        return this.hello(new RoutingContext(true, stringMap("policy", "fast", "region", "europe")));
     }
 
-    public static RequestMessage hello() {
-        return HELLO;
-    }
-
-    public static RequestMessage hello(Map<String, Object> meta, RoutingContext routingContext) {
-        if (!meta.containsKey("user_agent")) {
-            meta.put("user_agent", USER_AGENT);
-        }
+    protected RequestMessage hello(Map<String, Object> meta, RoutingContext routingContext) {
+        meta = this.getDefaultHelloMetaMap(meta);
+        // TODO: Why
         return new HelloMessage(meta, routingContext, meta);
-    }
-
-    public static RequestMessage run(String statement) {
-        return new RunMessage(statement);
-    }
-
-    public static RequestMessage run() {
-        return RUN_RETURN_ONE;
-    }
-
-    public static RequestMessage pull() throws BoltIOException {
-        return pull(-1);
-    }
-
-    public static RequestMessage discard() throws BoltIOException {
-        return discard(-1);
-    }
-
-    public static RequestMessage run(String statement, MapValue params) {
-        return new RunMessage(statement, params);
-    }
-
-    public static RequestMessage run(String statement, MapValue params, MapValue meta) {
-        return new RunMessage(statement, params, meta);
-    }
-
-    public static RequestMessage rollback() {
-        return INSTANCE;
-    }
-
-    public static RequestMessage commit() {
-        return INSTANCE;
-    }
-
-    public static RequestMessage reset() {
-        return ResetMessage.INSTANCE;
-    }
-
-    public static RequestMessage goodbye() {
-        return GoodbyeMessage.INSTANCE;
     }
 }
